# loreMemory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXPERT_REVIEW.md  MANIFEST.in  README.md  SCALE_IMPROVEMENTS.md  SECURITY.md  SHIP_READY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
api/: server.py
benchmarks/: baseline.json  benchmark.py  competitive_baseline.txt  competitive_bench.py  harness.py  locomo_bench.py  lore_bench.py  results.json
docker/: Dockerfile  docker-compose.yml
examples/: advanced.py  basic_usage.py  multi_user.py
lore_memory/: __init__.py  belief.py  cli.py  dedup.py  engine.py  extraction.py  extraction_gf.py  extraction_spacy.py  graph.py  lexicons.py  memory.py  normalization.py  repo.py  retrieval.py  safety.py  schema.py  scopes.py  store.py
mcp/: config_example.json  server.py
scripts/: finetune_model.py  generate_training_data.py  train_pairs.json  val_pairs.json
tests/: conftest.py  test_contexts.py  test_corpus_runner.py  test_edge_cases.py  test_isolation.py  test_known_regressions.py  test_llm_facts.py  test_spo_engine.py
