[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "loremem-ai"
version = "1.1.0"
description = "Persistent AI memory for LLMs and AI agents. Local-first. Learns from every interaction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["sentence-transformers>=2.0.0"]
authors = [
    {name = "Lore Contributors"},
]
keywords = [
    "memory", "ai", "llm", "agent", "mcp", "persistent-memory",
    "retrieval", "rag", "context", "sqlite", "local-first",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/loreMemory/loreMemory"
Repository = "https://github.com/loreMemory/loreMemory"
Documentation = "https://github.com/loreMemory/loreMemory#readme"
Issues = "https://github.com/loreMemory/loreMemory/issues"
Changelog = "https://github.com/loreMemory/loreMemory/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = ["pytest>=7.0"]

[project.scripts]
lore = "lore_memory.cli:main"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.setuptools.packages.find]
include = ["lore_memory*"]

[tool.setuptools.package-data]
lore_memory = ["py.typed"]
